// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Table component +++ renderer component 1`] = `
<Connect(Layout)>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-root-1"
    component="section"
    elevation={7}
  >
    <div
      className="makeStyles-wrapper-2"
    >
      <WithStyles(ForwardRef(Table))>
        <WithStyles(ForwardRef(TableHead))>
          <WithStyles(ForwardRef(TableRow))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              className="makeStyles-tabelCell-3"
            >
              Имя
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              className="makeStyles-tabelCell-3"
            >
              Статус
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="0"
            >
              Мобильный телефон
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="1"
            >
              Номер паспорта
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="2"
            >
              Домашний тел
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="3"
            >
              Паспорт
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
          </WithStyles(ForwardRef(TableRow))>
        </WithStyles(ForwardRef(TableHead))>
        <WithStyles(ForwardRef(TableBody))>
          <WithStyles(ForwardRef(TableRow))
            hover={true}
            key="0"
            role="checkbox"
            tabIndex={-1}
          >
            <WithStyles(ForwardRef(TableCell))>
              <WithStyles(ForwardRef(Fab))
                className="makeStyles-fab-4"
                onClick={[Function]}
                size="small"
              >
                <EditIcon
                  aria-label="edit"
                  className="makeStyles-editIcon-5"
                />
              </WithStyles(ForwardRef(Fab))>
              Новая заявка-35
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))>
              <WithStyles(ForwardRef(Select))
                fullWidth={true}
                id="demo-simple-select-outlined"
                onChange={[Function]}
                value="Статус-4"
                variant="outlined"
              >
                <WithStyles(ForwardRef(MenuItem))
                  id="5e28378cfa502c1edc0e7689"
                  key="0"
                  value="Статус-1"
                >
                  Статус-1
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  id="5e283799fa502c1edc0e768b"
                  key="1"
                  value="Статус-2"
                >
                  Статус-2
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  id="5e28379ffa502c1edc0e768c"
                  key="2"
                  value="Статус-4"
                >
                  Статус-4
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  id="5e2837a5fa502c1edc0e768d"
                  key="3"
                  value="Статус-5"
                >
                  Статус-5
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Select))>
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5dcac8a093dd3b05f8cb0adc"
            >
              +7 666 666 66 66
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5df9f19e1607be20381256e8"
            >
              79 98 666 555
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5dfa29e98ef6f51a186c395e"
            >
              516 69 69 
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5e00b1bfa63229263405fd21"
            >
              79 98 654 654
            </WithStyles(ForwardRef(TableCell))>
          </WithStyles(ForwardRef(TableRow))>
        </WithStyles(ForwardRef(TableBody))>
      </WithStyles(ForwardRef(Table))>
    </div>
    <WithStyles(ForwardRef(TablePagination))
      component="div"
      count={1}
      onChangePage={[Function]}
      onChangeRowsPerPage={[Function]}
      page={0}
      rowsPerPage={10}
      rowsPerPageOptions={
        Array [
          10,
          25,
          100,
        ]
      }
    />
  </WithStyles(ForwardRef(Paper))>
  <WithStyles(ForwardRef(Drawer))
    className="makeStyles-editDrawerOpen-8 makeStyles-editDrawerClose-9"
    classes={
      Object {
        "paper": "makeStyles-editDrawerClose-9",
      }
    }
    open={false}
  >
    <WithStyles(ForwardRef(Toolbar))
      className="makeStyles-toolbar-6"
    >
      <WithStyles(ForwardRef(IconButton))
        onClick={[Function]}
      >
        <ChevronLeftIcon />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Toolbar))>
    <WithStyles(ForwardRef(Divider)) />
    <Connect(EditOrder)
      editOrder={false}
    />
  </WithStyles(ForwardRef(Drawer))>
</Connect(Layout)>
`;

exports[`Tests Table component +++ simulation of a click event on the order editing button 1`] = `
<Connect(Layout)>
  <WithStyles(ForwardRef(Paper))
    className="makeStyles-root-1"
    component="section"
    elevation={7}
  >
    <div
      className="makeStyles-wrapper-2"
    >
      <WithStyles(ForwardRef(Table))>
        <WithStyles(ForwardRef(TableHead))>
          <WithStyles(ForwardRef(TableRow))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              className="makeStyles-tabelCell-3"
            >
              Имя
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              className="makeStyles-tabelCell-3"
            >
              Статус
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="0"
            >
              Мобильный телефон
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="1"
            >
              Номер паспорта
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="2"
            >
              Домашний тел
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
            <WithStyles(WithStyles(ForwardRef(TableCell)))
              align="right"
              className="makeStyles-tabelCell-3"
              key="3"
            >
              Паспорт
            </WithStyles(WithStyles(ForwardRef(TableCell)))>
          </WithStyles(ForwardRef(TableRow))>
        </WithStyles(ForwardRef(TableHead))>
        <WithStyles(ForwardRef(TableBody))>
          <WithStyles(ForwardRef(TableRow))
            hover={true}
            key="0"
            role="checkbox"
            tabIndex={-1}
          >
            <WithStyles(ForwardRef(TableCell))>
              <WithStyles(ForwardRef(Fab))
                className="makeStyles-fab-4"
                onClick={[Function]}
                size="small"
              >
                <EditIcon
                  aria-label="edit"
                  className="makeStyles-editIcon-5"
                />
              </WithStyles(ForwardRef(Fab))>
              Новая заявка-35
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))>
              <WithStyles(ForwardRef(Select))
                fullWidth={true}
                id="demo-simple-select-outlined"
                onChange={[Function]}
                value="Статус-4"
                variant="outlined"
              >
                <WithStyles(ForwardRef(MenuItem))
                  id="5e28378cfa502c1edc0e7689"
                  key="0"
                  value="Статус-1"
                >
                  Статус-1
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  id="5e283799fa502c1edc0e768b"
                  key="1"
                  value="Статус-2"
                >
                  Статус-2
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  id="5e28379ffa502c1edc0e768c"
                  key="2"
                  value="Статус-4"
                >
                  Статус-4
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  id="5e2837a5fa502c1edc0e768d"
                  key="3"
                  value="Статус-5"
                >
                  Статус-5
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Select))>
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5dcac8a093dd3b05f8cb0adc"
            >
              +7 666 666 66 66
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5df9f19e1607be20381256e8"
            >
              79 98 666 555
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5dfa29e98ef6f51a186c395e"
            >
              516 69 69 
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="right"
              key="5e00b1bfa63229263405fd21"
            >
              79 98 654 654
            </WithStyles(ForwardRef(TableCell))>
          </WithStyles(ForwardRef(TableRow))>
        </WithStyles(ForwardRef(TableBody))>
      </WithStyles(ForwardRef(Table))>
    </div>
    <WithStyles(ForwardRef(TablePagination))
      component="div"
      count={1}
      onChangePage={[Function]}
      onChangeRowsPerPage={[Function]}
      page={0}
      rowsPerPage={10}
      rowsPerPageOptions={
        Array [
          10,
          25,
          100,
        ]
      }
    />
  </WithStyles(ForwardRef(Paper))>
  <WithStyles(ForwardRef(Drawer))
    className="makeStyles-editDrawerOpen-8 makeStyles-editDrawerOpen-8"
    classes={
      Object {
        "paper": "makeStyles-editDrawerOpen-8",
      }
    }
    open={true}
  >
    <WithStyles(ForwardRef(Toolbar))
      className="makeStyles-toolbar-6"
    >
      <WithStyles(ForwardRef(IconButton))
        onClick={[Function]}
      >
        <ChevronLeftIcon />
      </WithStyles(ForwardRef(IconButton))>
    </WithStyles(ForwardRef(Toolbar))>
    <WithStyles(ForwardRef(Divider)) />
    <Connect(EditOrder)
      editOrder={
        Object {
          "_id": "5e28371aa7b3b8210c9d38de",
          "changes": Array [
            Object {
              "_id": "5e2837b7fa502c1edc0e768e",
              "data": "2020-01-22T11:53:27.209Z",
              "nextState": Object {
                "status": "Статус-2",
              },
              "previousState": Object {
                "status": "None",
              },
              "user": "test@test",
            },
          ],
          "comments": Array [],
          "fields": Array [
            Object {
              "_id": "5dcac8a093dd3b05f8cb0adc",
              "name": "Мобильный телефон",
              "value": "+7 666 666 66 66",
            },
            Object {
              "_id": "5df9f19e1607be20381256e8",
              "name": "Номер паспорта",
              "value": "79 98 666 555",
            },
            Object {
              "_id": "5dfa29e98ef6f51a186c395e",
              "name": "Домашний тел",
              "value": "516 69 69 ",
            },
            Object {
              "_id": "5e00b1bfa63229263405fd21",
              "name": "Паспорт",
              "value": "79 98 654 654",
            },
          ],
          "name": "Новая заявка-35",
          "status": Object {
            "_id": "5e28379ffa502c1edc0e768c",
            "name": "Статус-4",
          },
          "user": "5da47a1353265a14c80ef289",
        }
      }
    />
  </WithStyles(ForwardRef(Drawer))>
</Connect(Layout)>
`;
